Test additions 5 plugins' newer versions