@@ -7,6 +7,7 @@
     <groupId>ru.sbrf.lesson5</groupId>
     <artifactId>RebootLessons</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <url>scp://www.yourcompany.com/www/docs/project/</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,7 +19,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.4.2</version>
+            <version>5.5.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -30,7 +31,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>3.7.1</version>
+                <version>3.8.2</version>
+<!--
+                <configuration>
+                </configuration>
+-->
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.0.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -43,9 +53,33 @@
                             **/*
                         </include>
                     </includes>
+<!--                    <skip>${skipTests}</skip>-->
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    
+<!--
+        <reportPlugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.8</version>
+                <reports>
+                    <report>index</report>
+                </reports>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>2.5.5</version>
+                <configuration>
+                    <argLine>-Xmx256m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
+                    <timeout>240000</timeout>
+                    <effort>max</effort>
+                    <failOnError>true</failOnError>
+                </configuration>
+            </plugin>
+        </reportPlugins>
+-->
 </project>
